fix: fix that scrolling horizontaly in `HomeGrid` Works overflow the page

--- a/src/styles/scss/05_components/_home-grid.scss
+++ b/src/styles/scss/05_components/_home-grid.scss
@@ -16,7 +16,9 @@ body,
     margin: auto;
   }
 
-  &.home-grid--expanded {}
+  &.home-grid--expanded {
+    overflow: hidden;
+  }
 
   .home-grid__box,
   .home-grid__box>* {
